[package]
edition = "2021"
name = "solana_blockchain_index"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.10.13"

[dev-dependencies]
solana-program-test = "1.10.13"
solana-sdk = "1.10.13"

[lib]
crate-type = ["cdylib", "lib"]
name = "lib_solana_blockchain_index"
