[package]
description = "Invest into a crypto index using fungible tokens."
edition = "2021"
name = "index-investment"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "index_investment"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.24.2"
