[package]
description = "Track the performance of top cryptocurrencies using Pyth."
edition = "2021"
name = "solana-blockchain-index"
version = "0.6.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_blockchain_index"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.24.2"
pyth-sdk-solana = "0.4.1"
