[package]
edition = "2021"
name = "solana-blockchain-index"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_blockchain_index"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
# chrono = "0.4.19"
pyth-sdk-solana = "0.4.1"
# solana-client = "1.9.22"

[dev-dependencies]
