[package]
edition = "2021"
name = "solana-blockchain-index"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_blockchain_index"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.24.2"
pyth-sdk-solana = "0.4.1"

[dev-dependencies]
